# ctt_winter_series

./: .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  fly.toml  profiles.yml  pyproject.toml  runner.sh  test.py  test_loader.py  test_zpdf.py
.streamlit/: config.toml
__models/: _sources.yml
__models/core/: dim_results.sql  dim_round_results.sql  dim_standings.sql
__models/staging/: stg_segment_times.sql
_models/core/: dim_round_efforts.sql  dim_standings.sql
_models/staging/: stg_races.sql  stg_rounds.sql  stg_segment_results.sql
ingestion/: README.md  google_sheets.py  zpdf.py  zrapp.py
modal/: README.md  jobs.py  schedules.py  transformer.py  web_admin_app.py  web_app.py
models/: README.md  _sources.yml
models/analytics/: site_visits.sql
models/core/: dim_event_results.sql  dim_leaderboard.sql  dim_race_results.sql  dim_race_results.yml  dim_results.sql  dim_round_efforts.sql  dim_round_results.sql  dim_standings.sql  fct_rounds.sql  fct_winners.sql  obt_results.sql
models/staging/: stg_event_results.sql  stg_fts_ranks.sql  stg_fts_times.sql  stg_race_results.sql  stg_race_results.yml  stg_races.sql  stg_results.sql  stg_rounds.sql  stg_segment_results.sql  stg_segment_times.sql
seeds/: _events.csv  _rounds.csv  events.csv  rounds.csv
streamlit/: README.md  admin_app.py  app.py  series_analytics.py  tabs.py
streamlit/pages/: public_results.py  series_analytics.py
temp/: dim_event_results.sql  dim_leaderboard.sql  int_event_results.sql  int_fts_ranks.sql
