[project]
name = "ctt-winter-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt>=1.0.0.40.8",
    "dbt-core>=1.10.13",
    "dbt-duckdb>=1.10.0",
    "dlt[duckdb,parquet]>=1.18.2",
    "duckdb>=1.4.1",
    "httpx>=0.28.1",
    "modal>=1.2.2",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
]
